completed basic backend

--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,4 @@ MONGO_DB_USER=ecommerce
 MONGO_DB_PASSWORD=simmi12345
 MONGO_DB_DATABASE=ecommerce
 JWT_SECRETKEY=JWT_SECRETKEY
+api=http://localhost:9000
