--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,9 @@
     "express-validator": "^6.6.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.5",
-    "nodemon": "^2.0.4"
+    "multer": "^1.4.2",
+    "nodemon": "^2.0.4",
+    "shortid": "^2.2.15",
+    "slugify": "^1.4.5"
   }
 }
