--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/index.server.js",
+    "start": "node src/index.server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -22,5 +22,8 @@
     "nodemon": "^2.0.4",
     "shortid": "^2.2.15",
     "slugify": "^1.4.5"
+  },
+  "engines": {
+    "node": "v12.18.3"
   }
 }
